# client_server

./: pyproject.toml  run.py
client/src/: main.py
client/src/core/: config.py
client/src/ui/: __init__.py  main_window.py  main_windows.py
client/src/utils/: __init__.py  api_client.py
server/: requests.db
server/src/: main.py
server/src/core/: __init__.py  config.py  db_helper.py
server/src/core/models/: __init__.py  request.py
server/src/requests/: __init__.py  crud.py  schemas.py  views.py
server/tests/: test_requests.py
